--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "next": "15.1.6",
+    "openai": "^4.73.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "openai": "^4.73.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
